--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <li class="social-fb social-element"></li>
         </ul>
     </div>
-    <script src="/scripts/scriptModal.js"></script>
+    <script src="scripts/scriptModal.js"></script>
 </body>
 
 </html>
