--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                     </div>
                     <nav>
                         <ul>
-                            <li><a href="#">Мероприятия</a></li>
-                            <li><a href="#">Расписание</a></li>
-                            <li><a href="#">О компании</a></li>
+                            <li><a href="#events">Мероприятия</a></li>
+                            <li><a href="#timetable">Расписание</a></li>
+                            <li><a href="#about-company">О компании</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -58,7 +58,7 @@
         </div>
         <div class="container">
 
-            <h2 class="event-main-text">Ближайшие события</h2>
+            <h2 class="event-main-text" id="events">Ближайшие события</h2>
             <div class="events-list">
                 <div class="card">
                     <div class="card-background-maraphon">
@@ -98,7 +98,7 @@
         </div>
         <div class="container">
 
-            <div class="timetable-container-header">
+            <div class="timetable-container-header" id="timetable">
                 <h2 class="timetable-name">Расписание тренировок</h2>
                 <span class="timetable-date">22 - 28 июня</span>
             </div>
@@ -172,7 +172,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="container-pre-footer">
+            <div class="container-pre-footer" id="about-company">
                 <div class="footer-about-company">
                     <h2>О компании</h2>
                     <span>Наша компания является одной из немногих,
@@ -238,9 +238,9 @@
         <a href="#" class="main-logo"><img src="images/icons/logo.svg" alt="logo"></a>
         <nav>
             <ul class="modal-nav">
-                <li><a href="#">Мероприятия</a></li>
-                <li><a href="#">Расписание</a></li>
-                <li><a href="#">О компании</a></li>
+                <li><a href="#events">Мероприятия</a></li>
+                <li><a href="#timetable">Расписание</a></li>
+                <li><a href="#about-company">О компании</a></li>
             </ul>
         </nav>
         <button class="modal-close" onclick="closeModal()"></button>
