починил ссылку js и сделал якоря

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                 <div class="footer-nav-content">
                     <img class="main-logo" src="images/icons/logo.svg" alt="trena">
                     <nav>
-                        <ul>
-                            <li>Мероприятия</li>
-                            <li>Расписание</li>
-                            <li>О компании</li>
+                        <ul class="footer-ul">
+                            <li><a href="#events">Мероприятия</a></li>
+                            <li><a href="#timetable">Расписание</a></li>
+                            <li><a href="#about-company">О компании</a></li>
                         </ul>
                     </nav>
                 </div>
