возможно сделал телефон

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </nav>
                 </div>
                 <div class="social-footer">
-                    <div class="social">
+                    <div class="social social-footer-content">
                         <span class="social-email">info@freefit.com</span>
                         <ul class="social-ul">
                             <li class="social-inst social-element"><a href="#"></a></li>
