всё сделал, осталось подождать ошибки

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
                         <button class="training-button-info">Узнать подробнее</button>
                     </div>
                 </div>
-                    <img class="training-girl" src="images/girl.png" alt="girl">
+                <div class="training-girl">
+                    <div class="background-gradient"></div>
+                    <img src="images/girlclear.png" alt="123">
+                    
+                </div>
+                 <!--  <img class="training-girl" src="images/girl.png" alt="girl">     -->  
                 
                 <button class="training-slider"><img src="images/icons/arrow.svg" alt="slider"></button>
             </div>
