--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             </div>
             <div class="footer-end">
                 <span>© 2023, Все права защищены</span>
-                <span>Сделано в рамках курса учебной платформы <a href="https://www.youtube.com/@annblok_webdev">Annblok</a></span>
+                <span>Сделано в рамках курса учебной платформы <a href="https://www.youtube.com/@annblok_webdev" type="_blank">Annblok</a></span>
             </div>
         </div>
     </footer>
