вернул как было))

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                         <button class="training-button-info">Узнать подробнее</button>
                     </div>
                 </div>
-                <div class="training-girl">
+          <!--       <div class="training-girl">
                     <div class="background-gradient"></div>
                     <img src="images/girlclear.png" alt="123">
                     
-                </div>
-                 <!--  <img class="training-girl" src="images/girl.png" alt="girl">     -->  
+                </div>-->  
+                   <img class="training-girl" src="images/girl.png" alt="girl">    
                 
-                <button class="training-slider"><img src="images/icons/arrow.svg" alt="slider"></button>
+                 <button class="training-slider"><img src="images/icons/arrow.svg" alt="slider"></button>  
             </div>
         </div>
         <div class="container">
