--- a/index.html
+++ b/index.html
@@ -57,9 +57,11 @@
                     <img src="images/girlclear.png" alt="123">
                     
                 </div>-->  
-                   <img class="training-girl" src="images/girl.png" alt="girl">    
-                
-                 <button class="training-slider"><img src="images/icons/arrow.svg" alt="slider"></button>  
+                   <img class="training-girl" src="images/girl.png" alt="girl">
+                   <!--
+                    Change-1 изменил конпку на ссылку
+                   -->
+                 <a class="training-slider" href="#events"><img src="images/icons/arrow.svg" alt="slider"></a>  
             </div>
         </div>
         <div class="container">
