introduced the first changes "Change-1"

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 </div>
                 <div class="social-footer">
                     <div class="social social-footer-content">
-                        <span class="social-email">info@freefit.com</span>
+                        <a href="#" class="social-email" target="_blank">info@freefit.com</a>
                         <ul class="social-ul">
                             <li class="social-inst social-element"><a href="#"></a></li>
                             <li class="social-fb social-element"><a href="#"></a></li>
@@ -238,7 +238,7 @@
             </div>
             <div class="footer-end">
                 <span>© 2023, Все права защищены</span>
-                <span>Сделано в рамках курса учебной платформы <a href="https://www.youtube.com/@annblok_webdev" target="_blank">Annblok</a></span>
+                <span>Сделано в рамках курса учебной платформы <a href="https://frontendblok.com/" target="_blank">frontendblok</a></span>
             </div>
         </div>
     </footer>
