--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +10,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
-
 <body>
     <header>
         <div class="container">
@@ -152,8 +150,8 @@
                         <h3>Подпишитесь на рассылку</h3>
                     </div>
                     <div class="distribution-main-box">
-                        <input type="text" class="email" placeholder="Введите e-mail">
-                        <button type="submit" class="submit-email">ПОДПИСАТЬСЯ</button>
+                        <input type="text" class="email" id="email" placeholder="Введите e-mail">
+                        <button type="submit" class="submit-email" onclick="SendEmail()">ПОДПИСАТЬСЯ</button>
                     </div>
                     <div class="agreement">
                         <div class="agreement-submit-text">
@@ -244,6 +242,7 @@
         </ul>
     </div>
     <script src="scripts/scriptModal.js"></script>
+    <script src="scripts/scriptSendEmail.js"></script>
 </body>
 
 </html>
